Modify Driver Add API
